try fix 100vh problem on mobile browsers (with firefox)

--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -75,7 +75,7 @@
       flex-direction: column;
       position: fixed;
       width: 100vw;
-      height: -webkit-fill-available;
+      height: 100vh; // for webkit: -webkit-fill-available
       top: 0;
       right: 0;
       background-color: $pinkColor;
