--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -20,6 +20,10 @@
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+:root {
+   --app-height: 100%;
+}
+
 a:focus,
 a:active {
    outline: none;
@@ -34,14 +38,18 @@ aside {
 
 html,
 body {
-   height: 100%;
-   width: 100%;
+   width: 100vw;
+   height: 100vh;
    font-size: 100%;
    line-height: 1;
    font-size: 14px;
    -ms-text-size-adjust: 100%;
    -moz-text-size-adjust: 100%;
    -webkit-text-size-adjust: 100%;
+
+   @media not all and (hover:hover) {
+      height: var(--app-height);
+   }
 }
 
 input,
